--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -15,13 +15,31 @@ html, body {
   }
 }
 
-.wraper {
+button{
+  font-family: 'Jura', sans-serif !important;
+
+}
+img{
+  max-width: 100%;
+}
+.wrapper {
   padding-top: 35px;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
   min-height: 100%;
   //background-color: #afa;
+  .c_content{
+    flex: 1 0 auto;
+
+  }
+  .c_footer{
+    flex: 0 0 auto;
+    padding: 10px 0;
+    color: #ffffff;
+    background-color: #000;
+    font-size: 14px;
+
+  }
 }
 
 .cnt_full {
@@ -57,16 +75,16 @@ html, body {
 
 
 .c_form {
-  button {
+  /*button {
     background-color: #000;
     color: #fff;
     padding: 10px 25px;
-  }
+  }*/
 
 
   .input_group {
     display: block;
-
+    margin-bottom: 10px;
     &.icon_group {
       padding-left: 50px;
 
@@ -83,11 +101,19 @@ html, body {
       }
     }
 
+    span {
+      display: block;
+
+      &:first-of-type {
+        margin-bottom: 5px;
+      }
+    }
     input {
+      font-family: 'Jura', sans-serif !important;
+      font-size: $base_fs + 2px;
       width: 100%;
       display: block;
-      border: 1px solid blue;
-      margin-bottom: 15px;
+      border: 1px solid $color_4;
       height: 45px;
       padding: 5px 10px;
     }
@@ -95,6 +121,40 @@ html, body {
 
 
   .textarea_group {
+    display: block;
+
+    &.icon_group {
+      padding-left: 50px;
+
+    }
+
+    &.error_field {
+      .error_message {
+        color: red;
+        font-size: 12px;
+      }
+
+      textarea {
+        border-color: red;
+      }
+    }
+    span {
+      display: block;
+
+      &:first-of-type {
+        margin-bottom: 5px;
+      }
+    }
+    textarea {
+      width: 100%;
+      display: block;
+      border: 1px solid $color_4;
+      margin-bottom: 15px;
+      height: 90px;
+      padding: 5px 10px;
+      resize: vertical;
+
+    }
   }
 
   .button_group {
@@ -118,12 +178,36 @@ html, body {
   border: 2px solid $color_1;
   transition: all ease-in-out .5s;
   font-weight: $fontMedium;
+  outline: 0;
+  cursor: pointer;
   &:hover {
     background-color: transparent;
     color: $color_1;
   }
 
+  
+  
+  &.btn_dark{
+    background-color: $color_4;
+    color: $color_light;
+    border-color: $color_4;
+    &:hover {
+      background-color: transparent;
+      color: $color_4;
+    }
+  }
 }
+
+
+@keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 
 
 
